Add presentation for upcoming session

--- a/Flask-SQLAlchemy-Demo/SQLAlchemy-Demo-YoutubeData.ipynb
+++ b/Flask-SQLAlchemy-Demo/SQLAlchemy-Demo-YoutubeData.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# SQLAlchemy Basics\n",
     "\n",
-    "It is an end-toend system for working with Python DBAPI, relational databases, and SQL language aimed to:\n",
+    "It is an end-to-end system for working with Python DBAPI, relational databases, and SQL language aimed to:\n",
     "\n",
     "1. provide tools to assist with database development\n",
     "2. provide a strong ORM \n",
@@ -76,9 +76,28 @@
     "### Object Relational Mapping\n",
     "* ORM: Process of of associating object oriented classes with database tables\n",
     "* Domain model: set of object oriented classes\n",
+    "* Provide means to query database with domain term structures\n",
+    "* Some ORMs can sharden, store domain model across multiple schemas and databases\n",
+    "* Provide various patterns ffor concurrency\n",
+    "* ORM basically is tasked to translate between domain object and table row\n",
     "\n",
+    "#### ORM Style: Active Record\n",
     "\n",
-    "https://speakerdeck.com/zzzeek/introduction-to-sqlalchemy-pycon-2013?slide=29"
+    "* Use domain objects to handle their own persisitence\n",
+    "\n",
+    "#### Data Mapper\n",
+    "\n",
+    "* Details of persistence are kept seperate from object being persisted\n",
+    "\n",
+    "https://speakerdeck.com/zzzeek/introduction-to-sqlalchemy-pycon-2013?slide=29\n",
+    "\n",
+    "### Key ORM Patterns\n",
+    "\n",
+    "* Unit of Work - objects are maintained by system that tracks changes over course of transaction, and flushes pending changes periodically.\n",
+    "* Identify Map - objects are tracked by their primary key within unit of work, and are kept unique on that primary key identify\n",
+    "* Lazy Loading - Some attributes of an object may emit additional SQL queries when they are accessed\n",
+    "* Eager Loading Multiple tables are queried at once in order to load related objects and collections\n",
+    "* Method chaining - queries are composed using string of method calls which return new query object"
    ]
   },
   {
