Update Notebook documentation

--- a/PyBayTalks/2019/AB-Testing-Python/Code/ABTesting.ipynb
+++ b/PyBayTalks/2019/AB-Testing-Python/Code/ABTesting.ipynb
@@ -23,27 +23,88 @@
     "\n",
     "For documented remarks and commentary, [you can find out more from the Slide Deck](https://docs.google.com/presentation/d/1nr8O-hS070yhBZoc5KtMQgEdremG0-oZP0ujUnocELc/edit?usp=sharing).\n",
     "\n",
-    "Enjoy! :D\n",
-    "\n",
+    "Enjoy! :D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## AB Testing\n",
     "\n",
     "### Theory +more\n",
     "\n",
+    "A/B Testing is \"[a randomized experiment of two variants, A and B.]((https://en.wikipedia.org/wiki/A/B_testing))” This test quantitatively compares two versions with a single variable to compare what variant was effective. \n",
     "\n",
+    "For example, let's say we ran a digital ad campaign, with the following text. Using that text script, we want an engaging background behind us to get a higher % of clicks, Click Through Rate (CTR), between two backgrounds, see below.\n",
+    "\n",
+    "What is a better background to run this ad campaign on? Moreover, is it better than the other option--that is, is it more significant than the original/control option to switch to a different background, the variant option?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The Format\n",
     "\n",
     "Generally, A/B tests are abstractly in the form of the following format:\n",
     "\n",
     "![AB Testing Format](../Resources/Images/ABTesting-Format.PNG)\n",
     "\n",
-    "(Source: [“Probably Overthinking It” by Allen Downey](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html))\n",
+    "(Source: [“Probably Overthinking It” by Allen Downey](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more traditional A/B tests, in the statistics world \"Hypotheses tests\", individuals are taught the following format for determining what assumptions and calculations should be contained in your AB Tests.\n",
     "\n",
+    "![AB-Testing-Choices-Tree](../Resources/Images/AB-Testing-Choices-Tree.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, depending on the question you want to answer, and the type of data you've acquired, the test statistic and assumptions need to first be established, before proceeding onto a suitable test and its calculations\n",
+    "\n",
+    "![AB-Testing-Choices-Tree](../Resources/Images/Test-Choice-Wiki.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, depending on the question you want to answer, and the type of data you've acquired, the test statistic and assumptions need to first be established, before proceeding onto a suitable test and its calculations\n",
+    "\n",
+    "\n",
+    "Once selecting the appropriate test statistic and having the right assumptions, we can go more deeply into the calculations. In the case of CTRs, since we are using % calculations outside of the range of [0-1] between two groups, we could choose either of the following A/B Test formats....\n",
+    "\n",
+    "![AB-Testing-Choices-Tree](../Resources/Images/Test-Choice-Wiki.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More particularly, we will be proceeding with the Click Through Rate calculations examples, in the following\n",
+    "![AB-Testing-Choices-Tree](../Resources/Images/HighlightedChoice.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Test of Proportions\n",
     "\n",
-    "Let us have the proportion $p_i =\\tfrac{x_i}{n_i}$, \n",
+    "Let the proportion $p_i$ be defined as $p_i =\\tfrac{x_i}{n_i}$, \n",
     "\n",
     "where $x_i$ are the successes and $n_i$ is the total count of the sample.\n",
+    "\n",
+    "After consideration of assumptsion like a statement of the significance level $\\alpha$, covered later, we...\n",
     "\n",
     "State the Hypothesis:\n",
     "\n",
@@ -51,16 +112,33 @@
     "\n",
     "$H_1: \\bar{p_1} - \\bar{p_2} \\neq 0$\n",
     "\n",
+    "From there, we calculate the test statistic $t$ from our provided information\n",
+    "\n",
     "Test Statistic:\n",
     "\n",
     "$t= \\tfrac{ \\bar{p_1} - \\bar{p_2} - 0 }{SE}$, \n",
     "\n",
-    "where the standard error $SE = \\sqrt{(\\tfrac{p_1 (1-p_1)}{n_1}) + (\\tfrac{p_1 (1-p_1)}{n_1})}$\n",
+    "where the standard error $SE = \\sqrt{(\\tfrac{p_1 (1-p_1)}{n_1}) + (\\tfrac{p_2 (1-p_2)}{n_2})}$\n",
+    "\n",
+    "Thereafter, we calculate or find our referred critical test statistic $t^*$, related to our problem statement.\n",
+    "\n",
+    "Lastly, a conclusion would be made for this specific test.\n",
+    "\n",
+    "#### Chi Square Test (Optional)\n",
+    "\n",
+    "Relatably, we can use a similiar process and test statistic in evaluation of proportions. \n",
+    "\n",
+    "Let us have a 2x2 frequency table where columns are two groups of respondents and rows are the two responses \"successes\" and \"failures\". \n",
     "\n",
     "\n",
-    "#### Chi Square Test\n",
+    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
+    "|--------|--------|-------------|-----|\n",
+    "| Test 1 | X_1    | Y_1         | X_1 + Y_1  | \n",
+    "| Test 2 | X_2    | Y_2         | X_2 + Y_2   |\n",
+    "| Total  | x      | x           | x   | \n",
     "\n",
-    "Relatably, let us have a 2x2 frequency table where columns are two groups of respondents and rows are the two responses \"successes\" and \"failures\". Then we can provide an equivalent A/B test for the upcoming CTR metric as followed:\n",
+    "Then we can provide an equivalent A/B test for the upcoming CTR metric as followed:\n",
+    "\n",
     "\n",
     "State the Hypothesis:\n",
     "\n",
@@ -72,7 +150,17 @@
     "\n",
     "$\\chi^2= \\tfrac{(O-E)^2}{E}$, \n",
     "\n",
-    "where $O$ are the Observed values and $E$ are the Expected values."
+    "where $O$ are the Observed values and $E$ are the Expected values.\n",
+    "\n",
+    "> Note:\n",
+    "Expected values are calculated as such:\n",
+    "> For the top left region, it would be $\\tfrac{( x_{Clicks} * (X_1 + Y_1)}{x_T }$\n",
+    "\n",
+    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
+    "|--------|--------|-------------|-----|\n",
+    "| Test 1 | $Y_1$    | $Y_1$         | $X_1 + Y_1$  | \n",
+    "| Test 2 | $X_2 $   | $Y_2 $        | $X_2 + Y_2 $  |\n",
+    "| Total  | $x_{Clicks}$      | $x_{No Clicks}$        | $x_T$   | "
    ]
   },
   {
@@ -312,36 +400,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# campaign1Mean = campaign1_Df['CTR'].mean()\n",
-    "# campaign2Mean =campaign2_Df['CTR'].mean()\n",
-    "# print(\"Campaign 1 mean value:\",campaign1Mean)\n",
-    "# print(\"Campaign 1 mean value:\",campaign2Mean)\n",
-    "\n",
-    "# campaign1Std = campaign1_Df['CTR'].std()\n",
-    "# campaign2Std = campaign2_Df['CTR'].std()\n",
-    "\n",
-    "# print(\"Week 1 STD Value:\",campaign1Std)\n",
-    "# print(\"week 2 STD Value:\",campaign2Std)\n",
-    "\n",
-    "# ttest, pval = ttest_ind(campaign1_Df['CTR'],campaign2_Df['CTR'])\n",
-    "# print(\"p-value\",pval/2)\n",
-    "\n",
-    "# #TODO: Check out the p value one sided test, based one\n",
-    "# #https://stackoverflow.com/questions/15984221/how-to-perform-two-sample-one-tailed-t-test-with-numpy-scipy\n",
-    "\n",
-    "\n",
-    "# if pval/2 <0.05:\n",
-    "#   print(\"We reject the Null Hypothesis\")\n",
-    "# else:\n",
-    "#   print(\"We fail to reject the Null Hypothesis\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,9 +413,23 @@
     "Overall, we want to evaluate if there is a significant difference in the two group's CTR performance. Formulating that into the \"Hypothesis Test\" structure, we state the following:\n",
     "\n",
     "\n",
-    "We declare our \"**level of significance**\", $\\alpha$, to be equal to $\\alpha = .05$, for a one sided-test. \n",
     "\n",
-    "\n",
+    "We declare our \"**level of significance**\", $\\alpha$, to be equal to $\\alpha = .05$, for a one sided-test. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$H_0: \\bar{p_1} - \\bar{p_2} = 0$\n",
     "\n",
     "> (i.e. There is no significant difference between the two campaigns)\n",
@@ -385,7 +457,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Analyze The Results"
+    "## 3. Analyze The Results\n",
+    "\n",
+    "\n",
+    "$t= \\tfrac{ \\bar{p_1} - \\bar{p_2} - 0 }{SE}$, \n",
+    "\n",
+    "where the standard error $SE = \\sqrt{(\\tfrac{p_1 (1-p_1)}{n_1}) + (\\tfrac{p_2 (1-p_2)}{n_2})}$"
    ]
   },
   {
@@ -410,21 +487,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Campaign 1 CTR: 0.0166 with Standard Error 4.458492047466517e-06.\n",
+      "Campaign 2 CTR: 0.0134 with Standard Error 4.458492047466517e-06.\n",
+      "\n",
+      "T Statistic: 1.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Campaign 1 CTR: {round(p1,4)}' + f' with Standard Error {se1}.')\n",
+    "print(f'Campaign 2 CTR: {round(p2,4)}' + f' with Standard Error {se2}.\\n')\n",
+    "\n",
+    "print(f'T Statistic: {round(tStatistic,2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
     "criticalValue = scipy.stats.t.ppf(1.0 - 0.05, (n1 + n2-2))\n",
-    "bs(p1-p2) / standardError\n",
-    "criticalValue = scipy.stats.t.ppf(1.0 - 0.05, (n1 + n2-2))\n",
-    "​\n",
-    "#Two Sided P Value\n",
-    "one_side = 1 - scipy.stats.norm(loc = 0, scale = 1).cdf(tStatistic)\n",
-    "pvalue = one_side * 2\n",
-    "3. Analy\n",
+    "\n",
     "#Two Sided P Value\n",
     "one_side = 1 - scipy.stats.norm(loc = 0, scale = 1).cdf(tStatistic)\n",
     "pvalue = one_side * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have critical value t* at 1.65\n",
+      "and p-value of 0.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'We have critical value t* at {round(criticalValue,2)}\\nand p-value of {round(pvalue,2)}')"
    ]
   },
   {
@@ -435,48 +547,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 239,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.645096417365297"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "criticalValue"
+    "If the calculated t-statistic $t$ > critical value $t^*$, then we reject the null hypothesis $H_0$, and accept the alternative hypothesis $H_1$. \n",
+    "> Equivalently, if $p < \\alpha$, then we  reject the null hypothesis $H_0$. \n",
+    "\n",
+    "If not, then we fail to reject the null hypothesis $H_0$. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.28007239671690787"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pvalue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +570,7 @@
     }
    ],
    "source": [
-    "if pValue < 0.05:\n",
+    "if pValue < alpha:\n",
     "    print(\"We reject the Null Hypothesis H_0\")\n",
     "else:\n",
     "    print(\"We fail to reject the Null Hypothesis H_0\")"
@@ -601,10 +683,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expectedNonClicksSeries = (twoByTwo_df['Impressions']/twoByTwo_df['Impressions'].sum()) * twoByTwo_df['No Clicks'].sum() \n",
-    "\n",
     "expectedClicksSeries = (twoByTwo_df['Impressions']/twoByTwo_df['Impressions'].sum()) * twoByTwo_df['Clicks'].sum() \n",
     "\n",
+    "expectedNonClicksSeries = (twoByTwo_df['Impressions']/twoByTwo_df['Impressions'].sum()) * twoByTwo_df['No Clicks'].sum() \n",
     "\n",
     "expectedDf = pd.concat([expectedClicksSeries,expectedNonClicksSeries],axis=1)"
    ]
@@ -776,7 +857,8 @@
    "source": [
     "# Remarks\n",
     "\n",
-    "![Image](https://giphy.com/embed/p1FMSGnOdgno4')\n",
+    "![Image](https://giphy.com/embed/p1FMSGnOdgno4)\n",
+    "\n",
     "<a href=\"https://giphy.com/gifs/the-muppets-miss-piggy-fozzie-bear-p1FMSGnOdgno4\">via GIPHY</a></p>"
    ]
   },
@@ -825,6 +907,35 @@
     "        \n",
     "        https://stats.stackexchange.com/questions/76875/what-is-the-difference-between-mcnemars-test-and-the-chi-squared-test-and-how/141450#141450"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remarks\n",
+    "\n",
+    "### Chi Square Testing\n",
+    "\n",
+    "* Chi-square goodness of fit test\n",
+    "    * Test that determines if a sample data matches a population. For more details on this type, see: Goodness of Fit Test.\n",
+    "\n",
+    "* Chi-square test for independence\n",
+    "    * Test that compares two variables in a contingency table to see if they are related. In a more general sense, it tests to see whether distributions of categorical variables differ from each another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
