Modify working structure from beginning and re-arrange appendix.

--- a/PyBayTalks/2019/AB-Testing-Python/Code/ABTesting.ipynb
+++ b/PyBayTalks/2019/AB-Testing-Python/Code/ABTesting.ipynb
@@ -19,9 +19,11 @@
     "## 1.1 Introduction\n",
     "\n",
     "\n",
-    "This code is designated for my PyBay2019 talk on a (frequentist) approach to A/B Testing, in Python.\n",
+    "This document is designated for my PyBay 2019 talk on an (frequentist) approach to A/B Testing, in Python. \n",
     "\n",
-    "For documented remarks and commentary, [you can find out more from the Slide Deck](https://docs.google.com/presentation/d/1nr8O-hS070yhBZoc5KtMQgEdremG0-oZP0ujUnocELc/edit?usp=sharing).\n",
+    "> Note: There are A/B testing proprietary solutions like [Optimizely](https://www.optimizely.com/), [VWO](https://vwo.com/campaign/get-started/?utm_source=google&utm_medium=paid&utm_campaign=mof_search_brand_vwo_brand&utm_content=308583203468&utm_term=vwo&gclid=Cj0KCQjwv8nqBRDGARIsAHfR9wD7uaDnZRUDFKrXDtcn8jCv4v_dNhSRxzWsddKQAo0WuREO4phZ1PQaAopsEALw_wcB), [AB Tasty](https://www.abtasty.com/), [Google Optimize](https://optimize.google.com/optimize/home/), etc.\n",
+    "\n",
+    "[You can find the Slide Deck for this presentation here](https://docs.google.com/presentation/d/1nr8O-hS070yhBZoc5KtMQgEdremG0-oZP0ujUnocELc/edit?usp=sharing).\n",
     "\n",
     "Enjoy! :D"
    ]
@@ -35,9 +37,11 @@
     "\n",
     "### 1.2.1 Theory +more\n",
     "\n",
-    "A/B Testing is \"[a randomized experiment of two variants, A and B.]((https://en.wikipedia.org/wiki/A/B_testing))” This test quantitatively compares two versions with a single variable to compare what variant was effective. \n",
+    "A/B Testing is \"[a randomized experiment of two variants, A and B.]((https://en.wikipedia.org/wiki/A/B_testing))” This test quantitatively compares two versions with a single variable to compare what & if a variant was effective.\n",
     "\n",
-    "For example, let's say we ran a digital ad campaign, with the following text. Using that text script, we want an engaging background behind us to get a higher % of clicks, Click Through Rate (CTR), between two backgrounds, see below.\n",
+    "For example, let's say we ran a digital ad campaign, with the following text. \n",
+    "\n",
+    "Using that text script, we want an engaging background behind us to get a higher % of clicks, Click Through Rate (CTR), between two backgrounds, see below.\n",
     "\n",
     "What is a better background to run this ad campaign on? Moreover, is it better than the other option--that is, is it more significant than the original/control option to switch to a different background, the variant option?"
    ]
@@ -48,17 +52,19 @@
    "source": [
     "# 2.0 The Format\n",
     "\n",
+    "## 2.1 Abstract\n",
+    "\n",
     "Generally, A/B tests are abstractly in the form of the following format:\n",
     "\n",
     "![AB Testing Format](../Resources/Images/ABTesting-Format.PNG)\n",
     "\n",
     "(Source: [“Probably Overthinking It” by Allen Downey](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html))\n",
     "\n",
-    "0. Preface\n",
-    "1. Define collected sample data\n",
-    "2. State your Assumptions, Segments, and Metric of Change\n",
+    "0. State your assumptions, segments, and metric of change\n",
+    "1. Define and collect control group information\n",
+    "2. Identify you Minimum Detectable difference, sample size, and significance level\n",
     "3. State your Hypothesis\n",
-    "4. Run your experiment\n",
+    "4. Analyze\n",
     "5. Conclusion"
    ]
   },
@@ -69,26 +75,39 @@
     "____\n",
     "In the statistics world, \"Hypotheses tests\", or in industry A/B tests, individuals are taught the following structure for determining your assumptions and calculations in your test:\n",
     "\n",
-    "![AB-Testing-Choices-Tree](../Resources/Images/AB-Testing-Choices-Tree.png)\n"
+    "![AB-Testing-Choices-Tree](../Resources/Images/AB-Testing-Choices-Tree.png)\n",
+    "[Source](https://bloomingtontutors.com/blog/when-to-use-the-z-test-versus-t-test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 The Format: Test Statistic, A La Carte\n",
+    "## 2.2 The Format: Selecting the right Test Statistic \n",
     "\n",
-    "However, both depending on the question one is asking and the type of data you've acquired, one has to be careful on what is the appropriate test statistic and assumptions to use, from the following\n",
+    "The decision tree (not the ML one haha) of statistical computations is a particular approach to A/B Testing, with respect of question developed, data, and number of samples considered.\n",
+    "\n",
+    "That being said, one has to be careful on what test type to choose from, based on the assumptions and question being asked. \n",
+    "\n",
+    "The following are some examples of different tests with respective to assumptions like:\n",
     "\n",
     "![AB-Testing-Choices-Tree](../Resources/Images/Test-Choice-Wiki.png)\n",
-    "\n"
+    "\n",
+    "\n",
+    "In the previously mentioned tree, some of the questions that lead us down that avenue may be:\n",
+    "\n",
+    "1. I am comparing one sample to an observed case or two samples against one another\n",
+    "2. My data types for calculations are similar\n",
+    "3. What's the size of my dataset?\n",
+    "4. Do I know my standard deviation?\n",
+    "> Note: More on the comparisons between Z-test & T-test are covered in the Appendix section."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once selecting the appropriate test statistic and having the right assumptions, we can go more deeply into the calculations. In the case of our metric of choice, CTRs, we are using % calculations outside of the range of [0-1] between two groups, we could choose either of the following A/B Test formats....\n",
+    "Once selecting the appropriate test statistic and having the right assumptions, we can go more deeply into the calculations. \n",
     "\n",
     "![AB-Testing-Choices-Tree](../Resources/Images/Test-Choice-Current-Scenario.png)\n"
    ]
@@ -97,23 +116,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Test of Proportions\n",
+    "## 2.3 The Format: Test of Proportions\n",
+    "\n",
+    "Now here...we get a bit more specific, particularly for a t-test calculation\n",
+    "\n",
+    "> For more about different types of t-tests, see [the Appendix section](#appendix)\n",
+    "\n",
+    "Think of a specific question, and determine what the scenario you want to observe and specifically identify. Collect data, identify your metric of choice, and consider other assumptions from said collected data.\n",
+    "\n",
+    "Define a significance level $\\alpha$.\n",
     "\n",
     "Let the proportion $p_i$ be defined as $p_i =\\tfrac{x_i}{n_i}$, \n",
     "\n",
-    "where $x_i$ are the successes and $n_i$ is the total count of the sample.\n",
+    "where \n",
     "\n",
-    "After consideration of assumptions like a statement of the significance level $\\alpha$, covered later, we...\n",
+    "$x_i$ are the successes \n",
+    "& \n",
+    "$n_i$ is the total count of each sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**State the Hypothesis:**\n",
     "\n",
-    "State the Hypothesis:\n",
+    "There are three types of statements to consider when conducting a test, seen below.\n",
+    "\n",
+    "![Types of Test](../Resources/Images/two_tailed_test.png)\n",
+    "[Source](https://www.fromthegenesis.com/difference-between-one-tail-test-and-two-tail-test/)\n",
+    "\n",
+    "\n",
+    "In this case, we'll continue this example with the \"two-tail\" approach\n",
     "\n",
     "$H_0: \\bar{p_1} - \\bar{p_2} = 0$\n",
     "\n",
     "$H_1: \\bar{p_1} - \\bar{p_2} \\neq 0$\n",
     "\n",
-    "From there, we calculate the test statistic $t$ from our provided information\n",
+    "And this is similar to asking is there a observed difference, in any direction, between two samples $\\bar{p_1}$ and $\\bar{x_2}$\n",
     "\n",
-    "Test Statistic:\n",
+    "After defining our hypothesis, we calculate the test statistic $t$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Test Statistic:**\n",
     "\n",
     "$t= \\tfrac{ \\bar{p_1} - \\bar{p_2} - 0 }{SE}$, \n",
     "\n",
@@ -129,50 +179,16 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 2.3 Chi Square Test (Optional)\n",
+    "### 2.4 The Format: Chi Square Test (Optional)\n",
     "\n",
-    "Relatably, we can use a similiar process and test statistic in evaluation of proportions. \n",
-    "\n",
-    "Let us have a 2x2 frequency table where columns are two groups of respondents and rows are the two responses \"successes\" and \"failures\". \n",
-    "\n",
-    "\n",
-    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
-    "|--------|--------|-------------|-----|\n",
-    "| Test 1 | X_1    | Y_1         | X_1 + Y_1  | \n",
-    "| Test 2 | X_2    | Y_2         | X_2 + Y_2   |\n",
-    "| Total  | x      | x           | x   | \n",
-    "\n",
-    "Then we can provide an equivalent A/B test for the upcoming CTR metric as followed:\n",
-    "\n",
-    "\n",
-    "State the Hypothesis:\n",
-    "\n",
-    "$H_0: \\bar{p_1} - \\bar{p_2} = 0$\n",
-    "\n",
-    "$H_1: \\bar{p_1} - \\bar{p_2} \\neq 0$\n",
-    "\n",
-    "Test Statistic:\n",
-    "\n",
-    "$\\chi^2= \\tfrac{(O-E)^2}{E}$, \n",
-    "\n",
-    "where $O$ are the Observed values and $E$ are the Expected values.\n",
-    "\n",
-    "> Note:\n",
-    "Expected values are calculated as such:\n",
-    "> For the top left region, it would be $\\tfrac{( x_{Clicks} * (X_1 + Y_1)}{x_T }$\n",
-    "\n",
-    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
-    "|--------|--------|-------------|-----|\n",
-    "| Test 1 | $Y_1$    | $Y_1$         | $X_1 + Y_1$  | \n",
-    "| Test 2 | $X_2 $   | $Y_2 $        | $X_2 + Y_2 $  |\n",
-    "| Total  | $x_{Clicks}$      | $x_{No Clicks}$        | $x_T$   | "
+    "This test can equivalently be done by using another test framework & calculation. You can find the details of this example [in the Appendix section](#appendix-chi-square-test)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.0 Testing Time"
+    "# 3.0 Always Be Testing Time"
    ]
   },
   {
@@ -181,16 +197,15 @@
    "source": [
     "## 3.1 Preface\n",
     "\n",
-    "We define our variant groups to be Google Ad Campaigns promoting our portfolio in Google Search. The original variant, control, will have one type of \"Call to Action\", while the other has a different type of \"Call to Action\"\n",
+    "We define our variant groups to be Google Ad Campaigns promoting our portfolio in Google Search. The original variant, control, will have one type of \"Call to Action\", while the other has a different type of **\"Call to Action\"**\n",
     "\n",
     "> Example of a Call of Action: \"Sign Up for a free trial here!\"\n",
     "\n",
-    "**Our existing process**\n",
+    "**Existing process:**\n",
     "\n",
     "Users use Search for navigating in searches. User typically will see a list of responses for popular terms or keywords. When they query “data” or something related to our career, they will see an add. Moreover, they will see our add, if we win a bid on Google Ads.\n",
     "\n",
-    "**Experiment Goals**\n",
-    "Increasing exposure to potential prospects for future opportunities, as one of our channels\n"
+    "**Experiment Goals:** Observe if our new campaign will drive a performance increase performance in clicks."
    ]
   },
   {
@@ -271,7 +286,9 @@
     "\n",
     "* Application of the Central Limit Theorem for normal distribution\n",
     "\n",
-    "* With an appropriate traffic size, the binomial-like distribution of this scenario reaches a Standard Normal (Gaussian) Distribution"
+    "* With an appropriate traffic size, the binomial-like distribution of this scenario reaches a Standard Normal (Gaussian) Distribution\n",
+    "\n",
+    "* Our invariants metrics, metrics not affected by the experiment, are the numbers of users "
    ]
   },
   {
@@ -570,7 +587,9 @@
     "\n",
     "where the standard error $SE = \\sqrt{(\\tfrac{\\bar{p_1} (1-\\bar{p_1})}{n_1}) + (\\tfrac{\\bar{p_2} (1-\\bar{p_2})}{n_2})}$\n",
     "\n",
-    "> Note: When comparing between two groups, the notation $d:=\\bar{p_1} - \\bar{p_2}$ is introduced to simplify formula"
+    "> Note: When comparing between two groups, the notation $d:=\\bar{p_1} - \\bar{p_2}$ is introduced to simplify formula\n",
+    "\n",
+    "Moreover, our degrees of freedom for these two variants is defined as $DoF := (n_1 + n_2 -2)$"
    ]
   },
   {
@@ -1047,23 +1066,64 @@
     "\n",
     "## 5.1 Chi Square Testing\n",
     "\n",
-    "* Chi-square goodness of fit test\n",
-    "    * Test that determines if a sample data matches a population. For more details on this type, see: Goodness of Fit Test.\n",
+    "* Chi-Square Goodness of Fit Test\n",
+    "    * $\\chi^2$ Test that determines if a sample data matches a population. For more details on this type, see: Goodness of Fit Test.\n",
     "\n",
-    "* Chi-square test for independence\n",
-    "    * Test that compares two variables in a contingency table to see if they are related. In a more general sense, it tests to see whether distributions of categorical variables differ from each another.\n",
+    "* Chi-Square Test for Independence\n",
+    "\n",
+    "    * $\\chi^2$ Test that compares two variables in a contingency table to see if they are related. In a more general sense, it tests to see whether distributions of categorical variables differ from each another.\n",
     "    \n",
-    "    \n",
+    "> Note: Chi Square is cool because it works with more than 2 samples\n",
+    "\n",
+    "> Note: If we have a  small sample size, then Chi Square may have more errors, and thus one would have to work with a Fischer's Exact Test\n",
+    "\n",
     "## 5.2 Testing considerations\n",
     "\n",
-    "* Hyperfocusing on specific metric selections, rather than macro ones. (e.g. Wanting to increase Revenue is a goal, but what is the specific issue that you are tackling, to downstream speaking increase that)"
+    "* Ethics\n",
+    "    * Risk, Benefits, and Privacy for participants\n",
+    "    \n",
+    "* Hyperfocusing on specific metric selections, rather than macro ones. (e.g. Wanting to increase Revenue is a goal, but what is the specific issue that you are tackling, to downstream speaking increase that)\n",
+    "\n",
+    "* If you test on a smaller sample, realize test will have lower power, and thus is constrainted for detecting larger impacts \n",
+    "\n",
+    "* Keep in mind\n",
+    "    * when is the best time to run the experiment (e.g. running on Holidays, weekends?)\n",
+    "    * If there is a new change, there may be a learning effect, and then behaviour can become stable again (leading to a false positive)\n",
+    "        * Recommendation to avoid a Learning Effect is running experiment on smaller group of users, for longer period of time.\n",
+    "* Mind the possibility of the Simpson's Paradox\n",
+    "    * Segmentation of groups in thus reducing sampling creates significance, but not from other groups from data before segmentation. Best way to validate this doesn't exist is to do the same test for combined groups.\n",
+    "        * E.g. Splitting between new users and existing users\n",
+    "* $\\alpha$ percent of the time, you'll reach significance due to chance \n",
+    "    * You are running a tests with 20 variants, and you test each hypothesis separately:\n",
+    "        * P(one significant result) = 1−P(no significant results) \n",
+    "        * P(one significant result) = 1−(1−0.05)^20 = 0.64\n",
+    "    * Avoid this by the Bonferroni Correction\n",
+    "    \n",
+    "* Novelty Effect or Change Aversion: cohort analysis may be helpful.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3 Other Resources"
+    "<a id='appendix'></a>\n",
+    "\n",
+    "## 5.3 Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### P-Hacking\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tukey's Range Test (Optional) [WIP]"
    ]
   },
   {
@@ -1186,6 +1246,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='appendix-chi-square-test'></a>\n",
+    "\n",
+    "### Chi Square Test (Optional)\n",
+    "Equivalently, we can use a similiar process and test statistic in evaluation of proportions. \n",
+    "\n",
+    "Let us have a 2x2 frequency table where columns are two groups of respondents and rows are the two responses \"successes\" and \"failures\". \n",
+    "\n",
+    "\n",
+    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
+    "|--------|--------|-------------|-----|\n",
+    "| Test 1 | X_1    | Y_1         | X_1 + Y_1  | \n",
+    "| Test 2 | X_2    | Y_2         | X_2 + Y_2   |\n",
+    "| Total  | x      | x           | x   | "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can provide an equivalent A/B test for the upcoming CTR metric as followed:\n",
+    "\n",
+    "\n",
+    "State the Hypothesis:\n",
+    "\n",
+    "$H_0: \\bar{p_1} - \\bar{p_2} = 0$ (Independent)\n",
+    "\n",
+    "$H_1: \\bar{p_1} - \\bar{p_2} \\neq 0$ (Not Independent)\n",
+    "\n",
+    "DF = $(x_1 - 1) * (x_2 - 1)$\n",
+    "\n",
+    "Test Statistic:\n",
+    "\n",
+    "$\\chi^2= \\tfrac{(O-E)^2}{E}$, \n",
+    "\n",
+    "where $O$ are the Observed values and $E$ are the Expected values.\n",
+    "\n",
+    "> Note:\n",
+    "Expected values are calculated as such:\n",
+    "> For the top left region, it would be $\\tfrac{( x_{Clicks} * (X_1 + Y_1)}{x_T }$\n",
+    "\n",
+    "|    _    | Clicks | No Clicks | Total (Impressions) |\n",
+    "|--------|--------|-------------|-----|\n",
+    "| Test 1 | $Y_1$    | $Y_1$         | $X_1 + Y_1$  | \n",
+    "| Test 2 | $X_2 $   | $Y_2 $        | $X_2 + Y_2 $  |\n",
+    "| Total  | $x_{Clicks}$      | $x_{No Clicks}$        | $x_T$   | "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5.3.3 Data Collection Section\n",
     "\n",
     "#### 5.3.3.1 Basesline Conversion Rate\n",
@@ -1193,6 +1304,45 @@
     "Known in conversion-related AB testing calcilatsion, **baseline conversion rate** is the current conversion rate for the variant you’re testing.\n",
     "\n",
     "> Conversion rate is the number of conversions divided by the total number of visitors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definitions & Terminology\n",
+    "\n",
+    "* Null Hypothesis\n",
+    "\n",
+    "\n",
+    "* Alternative Hypthesis\n",
+    "\n",
+    "\n",
+    "![Null Hypothesis Comment](../Resources/Images/null_hypothesis_xkcd.png)\n",
+    "\n",
+    "[Source](https://xkcd.com/892/)\n",
+    "\n",
+    "* \"Test of Proportion\" is also seen as the 2-sample independent t-test\n",
+    "\n",
+    "* Standard Deviation\n",
+    "\n",
+    "* Mean \n",
+    "\n",
+    "* Variance\n",
+    "\n",
+    "* Bi-modal\n",
+    "\n",
+    "* Signifiance\n",
+    "\n",
+    "* P-value\n",
+    "\n",
+    "* Chi = $\\chi^2$\n",
+    "\n",
+    "* Central Limit Theorem: Sample of independent random variables from an unknown population that is non-normal. This sample's mean tends towards to a normal distribution, as the size $n$ becomes larger\n",
+    "\n",
+    "* Normal\n",
+    "\n",
+    "* Standard Normal"
    ]
   },
   {
